--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Dspace-checker</groupId>
-  <artifactId>Dspace-checker</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <groupId>url-crawler</groupId>
+  <artifactId>url-crawler</artifactId>
+  <version>1.0.0.1</version>
   <dependencies>
     <dependency>
       <groupId>org.jsoup</groupId>
@@ -54,16 +54,6 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>dom4j</groupId>
-      <artifactId>dom4j</artifactId>
-      <version>1.6.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.logging</groupId>
-      <artifactId>jboss-logging</artifactId>
-      <version>3.1.0.GA</version>
     </dependency>
     <dependency>
       <groupId>javax.transaction</groupId>
